--- a/Assets/Resources/Ui/BaseUI.uss
+++ b/Assets/Resources/Ui/BaseUI.uss
@@ -20,9 +20,9 @@
 }
 
 .scores {
-    font-size: 20px;
+    font-size: 70%;
     -unity-font-style: bold;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 0;
     padding-left: 10px;
     padding-right: 10px;
