--- a/Assets/Resources/Ui/BaseUI.uxml
+++ b/Assets/Resources/Ui/BaseUI.uxml
@@ -4,22 +4,25 @@
         <ui:GroupBox name="LeftSide" class="side nopadding" style="left: 0; top: 0; position: absolute;">
             <ui:GroupBox name="GroupBox" style="height: 25%; width: 100%; padding-top: 50px; justify-content: center; align-self: center; align-items: center;">
                 <ui:Label tabindex="-1" text="HIGHSCORE: " display-tooltip-when-elided="true" name="Highscore" class="scores slabel" style="position: absolute; left: 0; top: 0;" />
-                <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" class="scores scount" style="position: absolute; top: 0; right: 0; -unity-text-align: upper-center;" />
+                <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="HighscoreCount" class="scores scount" style="position: absolute; top: 0; right: 0; -unity-text-align: upper-center;" />
                 <ui:Label tabindex="-1" text="SCORE: " display-tooltip-when-elided="true" name="Score" class="scores slabel" style="position: absolute; top: 50px; left: 0; width: 75%;" />
                 <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="ScoreCount" class="scores scount" style="position: absolute; top: 50px; right: 0;" />
             </ui:GroupBox>
             <ui:GroupBox style="justify-content: space-between; align-self: center; width: 100%; height: 75%; align-items: stretch;">
-                <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); background-image: resource(&apos;Sprites/Buildings/CityBuilderPack&apos;); -unity-background-scale-mode: stretch-to-fill; width: 100px; height: 100px; align-self: center;" />
+                <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); background-image: resource(&apos;Sprites/Ressources/Sprite_Ressource_Stone&apos;); -unity-background-scale-mode: stretch-to-fill; width: 80%; height: 22.222%; align-self: center;" />
             </ui:GroupBox>
         </ui:GroupBox>
         <ui:GroupBox name="RightSide" class="side nopadding" style="position: absolute; left: auto; top: 0; right: 0;">
-            <ui:GroupBox style="margin-top: 50%; width: 100%; height: auto;">
+            <ui:GroupBox style="margin-top: 10px; width: 100%; height: auto;">
                 <ui:Label tabindex="-1" text="Controls:" display-tooltip-when-elided="true" name="Controlls" class="scores" />
                 <ui:Label tabindex="-1" text="- Movement:" display-tooltip-when-elided="true" name="Movement" class="scores" />
                 <ui:Label tabindex="-1" text="  ° Move Up: W" class="scores" />
                 <ui:Label tabindex="-1" text="  ° Move Down: S" display-tooltip-when-elided="true" class="scores" />
                 <ui:Label tabindex="-1" text="  ° Move Left: A" display-tooltip-when-elided="true" class="scores" />
                 <ui:Label tabindex="-1" text="  ° Move Right: D" display-tooltip-when-elided="true" class="scores" />
+            </ui:GroupBox>
+            <ui:GroupBox style="align-self: center; justify-content: center; align-items: center; -unity-background-image-tint-color: rgb(0, 0, 0); height: 22.22222%; position: absolute; bottom: 10px; width: 100%;">
+                <ui:VisualElement style="background-color: rgb(255, 255, 255); background-image: resource(&apos;Ui/MiniMapTexture&apos;); width: 100%; height: 100%; border-top-left-radius: 50%; border-bottom-left-radius: 50%; border-top-right-radius: 50%; border-bottom-right-radius: 50%; border-left-width: 5px; border-right-width: 5px; border-top-width: 5px; border-bottom-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
             </ui:GroupBox>
         </ui:GroupBox>
     </ui:VisualElement>
