--- a/Assets/Resources/Ui/StartUI.uxml
+++ b/Assets/Resources/Ui/StartUI.uxml
@@ -1,8 +1,15 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Resources/Ui/StartUI.uss?fileID=7433441132597879392&amp;guid=3a28b11338d157f4788cc18edfc98e2a&amp;type=3#StartUI" />
-    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); justify-content: center; align-items: center;">
-        <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); height: 20%;" />
-        <ui:Button text="Start" display-tooltip-when-elided="true" name="StartButton" class="button" />
-        <ui:Button text="Exit" display-tooltip-when-elided="true" name="ExitButton" class="button" />
-    </ui:VisualElement>
+    <ui:GroupBox style="width: 100%; height: 100%; padding-left: 10%; padding-right: 10%; padding-top: 10%; padding-bottom: 10%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;">
+        <ui:GroupBox name="Menu" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 30px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px;">
+            <ui:GroupBox style="width: 100%; height: 35%;">
+                <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgb(255, 0, 0);" />
+            </ui:GroupBox>
+            <ui:GroupBox style="height: 65%; width: 100%; overflow: hidden; opacity: 1; flex-direction: column;">
+                <ui:Button text="Start" display-tooltip-when-elided="true" name="StartButton" class="button" style="font-size: 20px; -unity-text-align: middle-center; height: 21.5%;" />
+                <ui:Button text="Button" display-tooltip-when-elided="true" name="OptionButton" class="button" style="margin-left: 0; margin-right: 0; margin-top: 10px; margin-bottom: 10px; padding-left: 10px; padding-right: 10px; padding-top: 10px; padding-bottom: 10px; width: 100%; font-size: 20px; -unity-font-style: bold; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; height: 21.5%; -unity-text-align: middle-center;" />
+                <ui:Button text="Exit" display-tooltip-when-elided="true" name="ExitButton" class="button" style="margin-left: 0; margin-right: 0; margin-top: 10px; margin-bottom: 10px; padding-left: 10px; padding-right: 10px; padding-top: 10px; padding-bottom: 10px; height: 21.5%; border-top-left-radius: 20px; border-bottom-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; font-size: 20px; -unity-font-style: bold; -unity-text-align: middle-center;" />
+            </ui:GroupBox>
+        </ui:GroupBox>
+    </ui:GroupBox>
 </ui:UXML>
