--- a/Assets/Resources/Ui/BaseUI.uxml
+++ b/Assets/Resources/Ui/BaseUI.uxml
@@ -2,26 +2,39 @@
     <Style src="project://database/Assets/Resources/Ui/BaseUI.uss?fileID=7433441132597879392&amp;guid=eca55c28e7fd14041b70f41ef3bc05e4&amp;type=3#BaseUI" />
     <ui:VisualElement name="Container" class="nopadding" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
         <ui:GroupBox name="LeftSide" class="side nopadding" style="left: 0; top: 0; position: absolute;">
-            <ui:GroupBox name="GroupBox" style="height: 25%; width: 100%; padding-top: 50px; justify-content: center; align-self: center; align-items: center;">
-                <ui:Label tabindex="-1" text="HIGHSCORE: " display-tooltip-when-elided="true" name="Highscore" class="scores slabel" style="position: absolute; left: 0; top: 0;" />
-                <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="HighscoreCount" class="scores scount" style="position: absolute; top: 0; right: 0; -unity-text-align: upper-center;" />
-                <ui:Label tabindex="-1" text="SCORE: " display-tooltip-when-elided="true" name="Score" class="scores slabel" style="position: absolute; top: 50px; left: 0; width: 75%;" />
-                <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="ScoreCount" class="scores scount" style="position: absolute; top: 50px; right: 0;" />
+            <ui:GroupBox name="GroupBox" style="height: 25%; width: 100%; padding-top: 0; justify-content: center; align-self: center; align-items: center; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-bottom: 0; flex-direction: row;">
+                <ui:GroupBox style="flex-direction: column; width: 75%; height: 50%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; align-items: flex-start; justify-content: center; align-self: center;">
+                    <ui:Label tabindex="-1" text="HIGHSCORE: " display-tooltip-when-elided="true" name="Highscore" class="scores slabel" style="padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 12%;" />
+                    <ui:Label tabindex="-1" text="SCORE: " display-tooltip-when-elided="true" name="Score" class="scores slabel" style="width: 75%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; font-size: 12%;" />
+                </ui:GroupBox>
+                <ui:GroupBox style="flex-direction: column; width: 25%; height: 50%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; align-items: center; justify-content: center; align-self: center;">
+                    <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="HighscoreCount" class="scores scount" style="top: 0; right: 0; -unity-text-align: upper-center; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; font-size: 12%;" />
+                    <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="ScoreCount" class="scores scount" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; font-size: 12%;" />
+                </ui:GroupBox>
             </ui:GroupBox>
-            <ui:GroupBox style="justify-content: space-between; align-self: center; width: 100%; height: 75%; align-items: stretch;">
-                <ui:VisualElement name="OnTruck" style="background-color: rgba(0, 0, 0, 0); background-image: resource(&apos;Sprites/Ressources/Sprite_Ressource_Stone&apos;); -unity-background-scale-mode: stretch-to-fill; width: 80%; height: 22.222%; align-self: center;" />
+            <ui:GroupBox style="height: 37.5%; width: 100%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
+                <ui:Label tabindex="-1" text="UPGRADES:" display-tooltip-when-elided="true" style="font-size: 12%; -unity-font-style: bold;" />
+                <ui:Button text="Speed" display-tooltip-when-elided="true" name="SpeedUp" style="font-size: 12%;" />
+                <ui:Button text="Capacity" display-tooltip-when-elided="true" name="CarryCapacityUp" style="font-size: 12%;" />
+                <ui:Button text="Time" display-tooltip-when-elided="true" name="BuildSpeedButton" style="font-size: 12%;" />
+            </ui:GroupBox>
+            <ui:GroupBox style="justify-content: flex-end; align-self: center; width: 100%; height: 37.5%; align-items: center; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
+                <ui:GroupBox name="GroupBox" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; width: 100%; height: 60%;">
+                    <ui:VisualElement name="OnTruck" style="background-color: rgba(0, 0, 0, 0); background-image: resource(&apos;Sprites/Ressources/Sprite_Ressource_Stone&apos;); -unity-background-scale-mode: stretch-to-fill; width: 100%; height: 100%; align-self: center;" />
+                    <ui:Label tabindex="-1" text="0/1" display-tooltip-when-elided="true" name="ElementCount" style="position: absolute; bottom: 0; right: 0;" />
+                </ui:GroupBox>
             </ui:GroupBox>
         </ui:GroupBox>
         <ui:GroupBox name="RightSide" class="side nopadding" style="position: absolute; left: auto; top: 0; right: 0;">
-            <ui:GroupBox style="margin-top: 10px; width: 100%; height: auto;">
-                <ui:Label tabindex="-1" text="Controls:" display-tooltip-when-elided="true" name="Controlls" class="scores" />
-                <ui:Label tabindex="-1" text="- Movement:" display-tooltip-when-elided="true" name="Movement" class="scores" />
-                <ui:Label tabindex="-1" text="  ° Move Up: W" class="scores" />
-                <ui:Label tabindex="-1" text="  ° Move Down: S" display-tooltip-when-elided="true" class="scores" />
-                <ui:Label tabindex="-1" text="  ° Move Left: A" display-tooltip-when-elided="true" class="scores" />
-                <ui:Label tabindex="-1" text="  ° Move Right: D" display-tooltip-when-elided="true" class="scores" />
+            <ui:GroupBox style="margin-top: 0; width: 100%; height: auto; margin-left: 0; margin-right: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
+                <ui:Label tabindex="-1" text="Controls:" display-tooltip-when-elided="true" name="Controlls" class="scores" style="font-size: 12%;" />
+                <ui:Label tabindex="-1" text="-Movement:" display-tooltip-when-elided="true" name="Movement" class="scores" style="font-size: 12%;" />
+                <ui:Label tabindex="-1" text=" °Move Up: W" class="scores" style="font-size: 12%;" />
+                <ui:Label tabindex="-1" text=" °Move Down: S" display-tooltip-when-elided="true" class="scores" style="font-size: 12%;" />
+                <ui:Label tabindex="-1" text=" °Move Left: A" display-tooltip-when-elided="true" class="scores" style="font-size: 12%;" />
+                <ui:Label tabindex="-1" text=" °Move Right: D" display-tooltip-when-elided="true" class="scores" style="font-size: 12%;" />
             </ui:GroupBox>
-            <ui:GroupBox style="align-self: center; justify-content: center; align-items: center; -unity-background-image-tint-color: rgb(0, 0, 0); height: 22.22222%; position: absolute; bottom: 10px; width: 100%;">
+            <ui:GroupBox style="align-self: center; justify-content: center; align-items: center; -unity-background-image-tint-color: rgb(0, 0, 0); height: 22.22222%; position: absolute; bottom: 10px; width: 100%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 2px; padding-right: 2px; padding-top: 2px; padding-bottom: 2px;">
                 <ui:VisualElement style="background-color: rgb(255, 255, 255); background-image: resource(&apos;Ui/MiniMapTexture&apos;); width: 100%; height: 100%; border-top-left-radius: 50%; border-bottom-left-radius: 50%; border-top-right-radius: 50%; border-bottom-right-radius: 50%; border-left-width: 5px; border-right-width: 5px; border-top-width: 5px; border-bottom-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
             </ui:GroupBox>
         </ui:GroupBox>
