--- a/Assets/Resources/Ui/StartUI.uxml
+++ b/Assets/Resources/Ui/StartUI.uxml
@@ -2,8 +2,8 @@
     <Style src="project://database/Assets/Resources/Ui/StartUI.uss?fileID=7433441132597879392&amp;guid=3a28b11338d157f4788cc18edfc98e2a&amp;type=3#StartUI" />
     <ui:GroupBox style="width: 100%; height: 100%; padding-left: 10%; padding-right: 10%; padding-top: 10%; padding-bottom: 10%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;">
         <ui:GroupBox name="Menu" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 30px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px;">
-            <ui:GroupBox style="width: 100%; height: 35%;">
-                <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgb(255, 0, 0);" />
+            <ui:GroupBox style="width: 100%; height: 35%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
+                <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-image: resource(&apos;Sprites/UI/logo&apos;); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
             </ui:GroupBox>
             <ui:GroupBox style="height: 65%; width: 100%; overflow: hidden; opacity: 1; flex-direction: column;">
                 <ui:Button text="Start" display-tooltip-when-elided="true" name="StartButton" class="button" style="font-size: 20px; -unity-text-align: middle-center; height: 21.5%;" />
