--- a/Assets/Resources/Ui/StartUI.uxml
+++ b/Assets/Resources/Ui/StartUI.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Resources/Ui/StartUI.uss?fileID=7433441132597879392&amp;guid=3a28b11338d157f4788cc18edfc98e2a&amp;type=3#StartUI" />
-    <ui:GroupBox style="width: 100%; height: 100%; padding-left: 10%; padding-right: 10%; padding-top: 10%; padding-bottom: 10%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;">
-        <ui:GroupBox name="Menu" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 30px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px;">
+    <ui:GroupBox style="width: 100%; height: 100%; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;">
+        <ui:GroupBox name="Menu" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.83); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 10%; padding-right: 10%; padding-top: 10%; padding-bottom: 10%;">
             <ui:GroupBox style="width: 100%; height: 35%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
-                <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-image: resource(&apos;Sprites/UI/logo&apos;); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+                <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-image: resource(&apos;Sprites/UI/logo&apos;); margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; -unity-background-scale-mode: scale-to-fit; height: 128px;" />
             </ui:GroupBox>
             <ui:GroupBox style="height: 65%; width: 100%; overflow: hidden; opacity: 1; flex-direction: column;">
                 <ui:Button text="Start" display-tooltip-when-elided="true" name="StartButton" class="button" style="font-size: 20px; -unity-text-align: middle-center; height: 21.5%;" />
